[package]
name = "rust-rewriter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
chrono = { version = "0.4", features = ["unstable-locales"] }
kuchiki = "0.8.1"